Fixed add pipeline modal not showing

--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -25,6 +25,14 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-.modal-wrapper{
-  background: transparent !important;
+//.modal-wrapper{
+//  background: transparent !important;
+//}
+
+.add-pipeline-modal {
+  .modal-wrapper{
+    position: absolute;
+    --height: fit-content;
+    min-height: 300px;
+  }
 }
